--- a/ui/src/app/modules/clinic/pages/patient-dashboard/patient-dashboard.component.html
+++ b/ui/src/app/modules/clinic/pages/patient-dashboard/patient-dashboard.component.html
@@ -22,69 +22,57 @@
   } as params"
 >
 
-  <app-shared-patient-dashboard
-    *ngIf="
-      params?.currentUser &&
-      !params?.rolesLoadingState &&
-      params?.privilegesConfigs &&
-      params?.userPrivileges &&
-      params?.activeVisit &&
-      !params?.loadingVisit &&
-      params?.provider &&
-      params?.iCareGeneralConfigurations &&
-      params?.iCareGeneralConfigurations !== '' &&
-      params?.iCareClinicConfigurations &&
-      params?.iCareClinicConfigurations !== '' &&
-      params?.currentLocation &&
-      params?.visitEndingControlStatusesConceptUuid &&
-      params?.observations &&
-      params?.IPDRoundConceptUuid &&
-      ((params?.activeVisit?.isAdmitted &&
-        params?.patientBillingDetails &&
-        params?.patient) ||
-        (params?.activeVisit && !params?.activeVisit?.isAdmitted))
-    "
-    [formPrivilegesConfigs]="params?.privilegesConfigs"
-    [currentUser]="params?.currentUser"
-    [activeVisit]="params?.activeVisit"
-    [userPrivileges]="params?.userPrivileges"
-    [iCareGeneralConfigurations]="params?.iCareGeneralConfigurations"
-    [clinicConfigurations]="params?.iCareClinicConfigurations"
-    [currentLocation]="params?.currentLocation"
-    [visitEndingControlStatusesConceptUuid]="
-      params?.visitEndingControlStatusesConceptUuid
-    "
-    [observations]="params?.observations"
-    [IPDRoundConceptUuid]="params?.IPDRoundConceptUuid"
-    (dichargePatient)="
-      dischargePatient(
-        $event,
-        params?.activeVisit,
-        params?.provider,
-        params?.patientBillingDetails,
-        params?.patient,
-        params?.currentUser
-      )
-    "
-  ></app-shared-patient-dashboard>
+  <div class="patient-dashboard-container">
+    <app-shared-patient-dashboard
+      *ngIf="
+        params?.currentUser &&
+        !params?.rolesLoadingState &&
+        params?.privilegesConfigs &&
+        params?.userPrivileges &&
+        params?.activeVisit &&
+        !params?.loadingVisit &&
+        params?.provider &&
+        params?.iCareGeneralConfigurations &&
+        params?.iCareGeneralConfigurations !== '' &&
+        params?.iCareClinicConfigurations &&
+        params?.iCareClinicConfigurations !== '' &&
+        params?.currentLocation &&
+        params?.visitEndingControlStatusesConceptUuid &&
+        params?.observations &&
+        params?.IPDRoundConceptUuid &&
+        ((params?.activeVisit?.isAdmitted &&
+          params?.patientBillingDetails &&
+          params?.patient) ||
+          (params?.activeVisit && !params?.activeVisit?.isAdmitted))
+      "
+      [formPrivilegesConfigs]="params?.privilegesConfigs"
+      [currentUser]="params?.currentUser"
+      [activeVisit]="params?.activeVisit"
+      [userPrivileges]="params?.userPrivileges"
+      [iCareGeneralConfigurations]="params?.iCareGeneralConfigurations"
+      [clinicConfigurations]="params?.iCareClinicConfigurations"
+      [currentLocation]="params?.currentLocation"
+      [visitEndingControlStatusesConceptUuid]="
+        params?.visitEndingControlStatusesConceptUuid
+      "
+      [observations]="params?.observations"
+      [IPDRoundConceptUuid]="params?.IPDRoundConceptUuid"
+      (dichargePatient)="
+        dischargePatient(
+          $event,
+          params?.activeVisit,
+          params?.provider,
+          params?.patientBillingDetails,
+          params?.patient,
+          params?.currentUser
+        )
+      "
+    ></app-shared-patient-dashboard>
+  </div>
+
   <div *ngIf="errors">
     <app-shared-error [errors]="errors"></app-shared-error>
   </div>
-  <!-- <div
-    class="alert alert-danger mt-2"
-    role="alert"
-    *ngIf="params?.iCareGeneralConfigurations === ''"
-  >
-    Missing General iCare Metadata Configurations, Please set "iCare.GeneralMetadata.Configurations" or Contact IT
-  </div>
-
-  <div
-    class="alert alert-danger mt-2"
-    role="alert"
-    *ngIf="params?.iCareClinicConfigurations === ''"
-  >
-    Missing Icare Clinic Configurations. Please set "icare.clinic.configurations" or Contact IT
-  </div> -->
 
   <mat-progress-bar
     mode="indeterminate"
